[metadata]
name = stix2gen
version = attr: stix2gen.version.STIX2GEN_VERSION
author = Claudio Guarnieri
author_email = nex@nex.sx
description = stix2gen
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/botherder/stix2gen
keywords = security, forensics, malware
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = ./
install_requires =
    click >=8.1.3
    stix2 >=3.0.1
    validators >=0.20.0

[options.packages.find]
where = ./

[options.entry_points]
console_scripts =
    stix2gen = stix2gen.cli:cli

[flake8]
max-complexit = 10
max-line-length = 1000
ignore =
    C901,
    E265,
    F401,
    E127,
    W503,
    E226
